5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4128/executions/1785_1595.log
== TEST (2019-05-30 11:06:32) 
-- CODE:
from numpy import*

n =  array(eval(input("notas:")))
i = 0

while(i =! size(n)):
	i = i + 1
	z = n.repload(min(n),"")
	x = max(n)/size(n)
	
print(x)
-- ERROR:
File "XXXX", line 6
    while(i =! size(n)):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:06:38) 
-- CODE:
from numpy import*

n =  array(eval(input("notas:")))
i = 0

while(i != size(n)):
	i = i + 1
	z = n.repload(min(n),"")
	x = max(n)/size(n)
	
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:08:49) 
-- CODE:
from numpy import*

n =  array(eval(input("notas:")))
i = 0

while(i != size(n)):
	i = i + 1
	z = zeros(min(n),dtype=int)

x = max(n)/size(n)	
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:11:05) 
-- CODE:
from numpy import*

n =  array(eval(input("notas:")))
i = 0
min()
while(i != size(n)):
	i = i + 1
x = max(n)/size(n)	
print(x)
print(min(n))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:11:28) 
-- CODE:
from numpy import*

n =  array(eval(input("notas:")))
i = 0
z = min(n)
while(i != size(n)):
	i = i + 1
x = max(n)/size(n)	
print(x)
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:12:33) 
-- CODE:
from numpy import*

n =  array(eval(input("notas:")))
i = 0
z = min(n)
while(i != size(n)):
	i = i + 1
	p = zeros(z,dtype=int)
	
x = max(n)/size(n)	
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:13:25) 
-- CODE:
from numpy import*

n =  array(eval(input("notas:")))
i = 0
z = min(n)
z = zeros(z,dtype=int)
	
x = max(n)/size(n)	
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:13:59) 
-- CODE:
from numpy import*

n =  array(eval(input("notas:")))
i = 0
z = min(n)

	
x = max(n) - z/size(n)	
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:14:31) 
-- CODE:
from numpy import*

n =  array(eval(input("notas:")))

z = min(n)

	
x = max(n) - z
y = x /size(n)	
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:15:04) 
-- CODE:
from numpy import*

n =  array(eval(input("notas:"))	
x = max(n) - min(z)
y = x /size(n)	
print(y)

-- ERROR:
File "XXXX", line 4
    x = max(n) - min(z)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:16:18) 
-- CODE:
from numpy import*

n =  array(eval(input("notas:")))
i = 0
z = min(n)

while(i != size(n)):
	i = i + 1
	if(z == min(n)):
		z = 0
	
x = max(n)/size(n)	
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:16:32) 
-- CODE:
from numpy import*

n =  array(eval(input("notas:")))
i = 0
z = min(n)

if(z == min(n)):
	z = 0
	
x = max(n)/size(n)	
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:16:43) 
-- CODE:
from numpy import*

n =  array(eval(input("notas:")))
i = 0
z = min(n)

if(z == min(n)):
	z = 0
	
	x = max(n)/size(n)	
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:16:45) 
-- CODE:
from numpy import*

n =  array(eval(input("notas:")))
i = 0
z = min(n)

if(z == min(n)):
	z = 0
	
	x = max(n)/size(n)	
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:44:06) 
-- CODE:
from numpy import*

n =  array(eval(input("notas:")))
i = 0
z = min(n)

while(i != size(n)):
	i = i + 1
	
	
x = max(n)/size(n)	
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:45:44) 
-- CODE:
from numpy import*

n =  array(eval(input("notas:")))
i = 0
z = min(n)

while(i != size(n)):
	i = i + 1
	f = n[i] -z
	
x = max(n)/size(n)	
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:45:59) 
-- CODE:
from numpy import*

n =  array(eval(input("notas:")))
i = 0
z = min(n)

while(i != size(n)):
	i = i + 1
	
	
x = max(n)/size(n)	
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:47:15) 
-- CODE:
from numpy import*

n =  array(eval(input("notas:")))
i = 0
z = min(n)

while(i != size(n)):
	p = z.repload(z,"")
	i = i + 1
	x = max(n)/size(n)	
	
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:49:27) 
-- CODE:
from numpy import*

n =  array(eval(input("notas:")))
i = 0

f = min(n)
l = zeros(f,dtype=int)
while(i != size(n)):
	i = i + 1
	
	x = max(n)/size(n)	
	
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:49:42) 
-- CODE:
from numpy import*

n =  array(eval(input("notas:")))
i = 0

f = min(n)
l = zeros(f,dtype=float)
while(i != size(n)):
	i = i + 1
	
	x = max(n)/size(n)	
	
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:51:58) 
-- CODE:
from numpy import*

n =  array(eval(input("notas:")))
i = 0

while(i != size(n)):
	i = i + 1
	if(i > 0):
		f = min(n)
		f = f - f
		
	x = max(n)/size(n)	
	
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:52:10) 
-- CODE:
from numpy import*

n =  array(eval(input("notas:")))
i = 0

while(i != size(n)):
	i = i + 1
	if(i > 0):
		f = min(n)
		f = f - f
		
x = max(n)/size(n)	
	
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:53:43) 
-- CODE:
from numpy import*

n =  array(eval(input("notas:")))
i = 0

while(i != size(n)):
	i = i + 1
	if(i != 0):
		f = min(n)
		f = 0
		
x = max(n)/size(n)	
	
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:53:57) 
-- CODE:
from numpy import*

n =  array(eval(input("notas:")))
i = 0

while(i != size(n)):
	i = i + 1
	if(i != 0):
		f = min(n)
		f = 0
		
x = max(n)/size(n)	
	
print(x)

-- EXECUTION TIME:
0.268868
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
1.0
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
1.0
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
0.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
